[package]
name = "link-archiver"
version = "0.1.0"
authors = ["kvfi <mail@ouafi.net>"]
edition = "2018"

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
sqlite = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
simple_logger = "1.11.0"
format-sql-query = "0.4.0"
chrono = "0.4.19"